--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,18 +1,18 @@
 <nav class="nav-bar custom-toggler">
    
     <div class="container top-nav"> 
-        <div class="logo-container"> 
+        <div class="logo-container" routerLink="/" style="cursor: pointer" >
         <img class="logo-img" src="../assets/images/Logo.png" alt="logo">
     </div>
   <ul class="nav-tabs-container">
-      <li class="nav-tab " routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/"> {{'homePage' | translate}}</a></li>
-      <li class="nav-tab " routerLinkActive="active"><a routerLink="/About">{{'aboutPortal' | translate}}</a> </li>
-      <li class="nav-tab " routerLinkActive="active"><a routerLink="/Factories">{{'IndustrialDepartments' | translate}}</a>
+      <li class="nav-tab " routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/" queryParamsHandling="merge"> {{'homePage' | translate}}</a></li>
+      <li class="nav-tab " routerLinkActive="active"><a routerLink="/About" queryParamsHandling="merge">{{'aboutPortal' | translate}}</a> </li>
+      <li class="nav-tab " routerLinkActive="active"><a routerLink="/Factories" queryParamsHandling="merge">{{'IndustrialDepartments' | translate}}</a>
           <!-- <span class="icon-Icon-arrow rotate-down white-colored-txt drop-down-arrow"></span> -->
       </li>
       <!-- <li class="nav-tab " routerLinkActive="active"><a routerLink="/FactoryDetails">{{'sponsors' | translate}}</a></li> -->
-      <li class="nav-tab " routerLinkActive="active"><a routerLink="/AddFactory">{{'AddFactory' | translate}}</a></li>
-      <li class="nav-tab " routerLinkActive="active"><a routerLink="/ContactUs">{{'ContactUs' | translate}}</a></li>
+      <li class="nav-tab " routerLinkActive="active"><a routerLink="/AddFactory" queryParamsHandling="merge">{{'AddFactory' | translate}}</a></li>
+      <li class="nav-tab " routerLinkActive="active"><a routerLink="/ContactUs" queryParamsHandling="merge">{{'ContactUs' | translate}}</a></li>
   </ul>
   <button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher" (click)="switchLang()">{{'lang'|translate}}</button>
   
@@ -26,22 +26,22 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" routerLink="/">{{'homePage' | translate}}</a>
+              <a class="nav-link" routerLink="/" queryParamsHandling="merge">{{'homePage' | translate}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/About">{{'aboutPortal' | translate}}</a>
+              <a class="nav-link" routerLink="/About" queryParamsHandling="merge">{{'aboutPortal' | translate}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " routerLink="/Factories">{{'IndustrialDepartments' | translate}}</a>
+              <a class="nav-link " routerLink="/Factories" queryParamsHandling="merge">{{'IndustrialDepartments' | translate}}</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link " routerLink="/FactoryDetails">{{'sponsors' | translate}}</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link " routerLink="/AddFactory">{{'AddFactory' | translate}}</a>
+              <a class="nav-link " routerLink="/AddFactory" queryParamsHandling="merge">{{'AddFactory' | translate}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " routerLink="/ContactUs">{{'ContactUs' | translate}}</a>
+              <a class="nav-link " routerLink="/ContactUs" queryParamsHandling="merge">{{'ContactUs' | translate}}</a>
             </li>
             <li class="nav-item">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="switchLang()">{{'lang'|translate}}</button>
