--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="uae-info-paragraph-img-container">
-                    <img src="../assets/images/about-bg.png" class="uae-info-paragraph-img"alt="site-guide-background">
+                    <img [src]="baseDaleImagelUrl+AboutUs.image" class="uae-info-paragraph-img"alt="site-guide-background">
                 </div>
             </div>
         </div>
